// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorHandler render NoTracksFront component if there are no tracks and user is not in edit mode 1`] = `
<div class="errorContainer">
  <p class="melody__body">Doh! It looks like there aren't any tracks loaded.</p>
</div>
`;

exports[`ErrorHandler renders BadSource component if error codes contains bad source error 1`] = `
<div class="errorContainer">
  <p class="melody__body">Unable to play track, the source was not found.</p>
  <button class="btn errorContainer__reloadBtn"
  role="button">Reload</button>
</div>
`;

exports[`ErrorHandler renders DefaultError component for unhandled errors 1`] = `
<div class="errorContainer">
  <span>
    <svg class="errorContainer__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
      <path d="m110 150 20 0 0 20-20 0zm0-80 20 0 0 60-20 0zm9.9-50C64.7 20 20 64.8 20 120 20 175.2 64.7 220 119.9 220 175.2 220 220 175.2 220 120 220 64.8 175.2 20 119.9 20Zm0.1 180c-44.2 0-80-35.8-80-80 0-44.2 35.8-80 80-80 44.2 0 80 35.8 80 80 0 44.2-35.8 80-80 80z"></path>
    </svg>
    <p class="melody__body">Something went wrong!</p>
  </span>
  <button class="btn errorContainer__reloadBtn" role="button">Reload</button>
</div>
`;

exports[`ErrorHandler renders NoTracksEditor component if there are no tracks and user is in edit mode 1`] = `
<div class="errorContainer">
  <p class="melody__body">Doh! It looks like there aren't any tracks loaded.</p>
</div>
`;
